PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 6.0
- Unicode support. (Andrei, Dmitriy, et al)
- Changed "instanceof" operator to not call __autoload(). (Dmitry)
- cURL improvements: (Ilia)
  . Added curl_setopt_array() which allows setting of multiple cURL options.
  . Added CURLINFO_HEADER_OUT to facilitate request retrieval.
- Added an optional parameter to parse_url() to allow retrieval of distinct URL
  components. (Ilia)
- Added an optional parameter to strstr() and stristr() for retrieval of either
  the part of haystack before or after first occurence of needle. (Johannes)